v3.6.1 (2020-XX-XX)
-------------------

* Fix bug affecting spliced subqueries when memory blocks are reused.

* Now clearing an internal map inside the traverser engine correctly.

* Add ability to choose logging to file in Windows installer of ArangoDB server
  (enabled by default).

  ArangoDB-logs folder with arangod.log should be stored in %PROGRAMDATA% and
  %LOCALAPPDATA% for all users and single user installation respectively.

* Fix installation of arangoinspect and libraries in Windows client installer.

* Disable cluster AQL parallelization for queries that contain traversal,
  shortest path or k_shortest_path nodes.
  This avoids potential undefined behavior in case a parallel GatherNode is used
  in graph queries.

* Fixed internal issue #656: While executing large amount of concurrent
  insert/removes iresearch seems to leak open file handles. This results in
  error 32 in cleanup (observed only on Windows as Linux doesn`t have file
  sharing locks).

* Updated arangosync to 0.7.2.

* Fix Windows client package JS installation paths.

* Added option that makes ArangoDB write logfiles in the Windows installer.


v3.6.0 (2020-01-08)
-------------------

* Do not create a reboot tracker for empty serverId ubin sync repl.

* Update swagger.


v3.6.0-rc.2 (2019-12-23)
------------------------

* Fixed issue #10725: Wrong document count shown inside an empty collection in
  the web UI.

* Fixed bug that made AQL queries eligible for parallelization even in case
  they couldn't be parallelized, leading to undefined behavior due to the
  thread races.

* Fixed bug in `--query.parallelize-gather-writes-behavior` which led to
  the option not working correctly.

* Agency relational operators TTL fix.

* Improve latency in scheduler.

* Fixed internal issue #4748: Editing a single edgeDefinition using the graph
  API failed if it was not shared between all available graphs.

* Fixed undefined behavior on node delete.

* Fixed agency invalid operation.
