@@ -32,6 +32,9 @@
 #include "Graph/TraverserOptions.h"
 #include "Logger/LogMacros.h"
 
+#include "Basics/StaticStrings.h"
+
+using namespace arangodb;
 using namespace arangodb::aql;
 using namespace arangodb::basics;
 using EN = arangodb::aql::ExecutionNode;
@@ -272,9 +275,9 @@ static bool checkPathVariableAccessFeasible(Ast* ast, AstNode* parent, size_t te
           notSupported = true;
           return node;
         }
-        if (node->stringEquals("edges", false)) {
+        if (node->stringEquals(StaticStrings::GraphQueryEdges)) {
           isEdge = true;
-        } else if (node->stringEquals("vertices", false)) {
+        } else if (node->stringEquals(StaticStrings::GraphQueryVertices)) {
           isEdge = false;
         } else {
           notSupported = true;
@@ -517,8 +520,7 @@ bool TraversalConditionFinder::before(ExecutionNode* en) {
     case EN::LIMIT:
     case EN::SHORTEST_PATH:
     case EN::K_SHORTEST_PATHS:
-    case EN::ENUMERATE_IRESEARCH_VIEW:
-    {
+    case EN::ENUMERATE_IRESEARCH_VIEW: {
       // in these cases we simply ignore the intermediate nodes, note
       // that we have taken care of nodes that could throw exceptions
       // above.
@@ -544,7 +546,8 @@ bool TraversalConditionFinder::before(ExecutionNode* en) {
 
     case EN::FILTER: {
       // register which variable is used in a FILTER
-      _filterVariables.emplace(ExecutionNode::castTo<FilterNode const*>(en)->inVariable()->id);
+      _filterVariables.emplace(
+          ExecutionNode::castTo<FilterNode const*>(en)->inVariable()->id);
       break;
     }
 
