@@ -1,6 +1,10 @@
 v3.6.1 (2020-XX-XX)
 -------------------
 
+* Fix string comparison bug that lead to traversal queries accepting
+  prefixes of "edges" and "vertices" to be used as object accessors
+  for the path object.
+
 * Fix bug affecting spliced subqueries when memory blocks are reused.
 
 * Now clearing an internal map inside the traverser engine correctly.
